docs/main.css
/*!**************************************************************************************************************!*\
  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/styles/main.css ***!
  \**************************************************************************************************************/
@import url(https://fonts.googleapis.com/css?family=Nunito+Sans);
/*!******************************************************************************************************************!*\
  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/styles/main.css (1) ***!
  \******************************************************************************************************************/
@import url(https://fonts.googleapis.com/css?family=Rubik);
/*!******************************************************************************************************************!*\
  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/styles/main.css (2) ***!
  \******************************************************************************************************************/
html {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  padding: 0;
  font-size: 100%;
  line-height: 1.5;
  color: #555;
  font-family: "Nunito Sans", sans-serif;
  /*overflow: hidden; /* Hide scrollbars */
}

article,
aside,
figcaption,
figure,
footer,
header,
nav,
section {
  display: block;
}

h1,
h2,
h3,
h4,
strong {
  margin-top: 1em;
  padding-top: 1em;
  line-height: 1.25;
  color: #333;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1rem;
}

ol,
ul {
  padding-left: 40px;
}

figure,
ol,
p,
ul {
  margin: 1em 0;
}

a img {
  border: 0;
}

#boids-js {
  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
  background: #1488CC;
  display: flex;
  vertical-align: bottom;
  width: 100%;
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.header {
  z-index: 1;
  text-align: center;
  color: #fff;
  position: absolute;
  font-family: "Rubik", sans-serif;
  width: 80%;
  top: 50%;
  left: 50%;
  margin: 0 auto;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.header .site-title {
  font-size: 35px;
  display: block;
  line-height: 1;
  color: #fff;
}

@media only screen and (min-width: 550px) {
  .header .site-title {
    margin: 0;
    font-size: 100px;
  }
}
.header .site-description {
  font-size: 20px;
  display: block;
  line-height: 1;
  color: #fff;
  margin-top: 10px;
}

@media only screen and (min-width: 550px) {
  .header .site-description {
    font-size: 40px;
  }
}
.header-links {
  margin: 10px;
}

.header-links .link {
  color: #fff;
  text-decoration: none;
  font-size: 15px;
  margin: 10px;
}

@media only screen and (min-width: 550px) {
  .header-links .link {
    font-size: 20px;
  }
}
.header-icons {
  display: flex;
  justify-content: center;
  text-align: center;
}

.down,
.header-icons .icon {
  color: #fff;
  text-align: center;
}

.header-icons .icon {
  height: 20px;
  padding: 10px;
  border-radius: 50%;
  border: 2px solid #fff;
  transition: all 0.7s;
  width: 20px;
  font-size: 20px;
  margin: 5px;
}

.header-icons .icon:active,
.header-icons .icon:hover {
  color: #1488CC;
  background: #fff;
}

@media only screen and (min-width: 550px) {
  .header-icons .icon {
    width: 35px;
    height: 35px;
    font-size: 35px;
  }
}
.down {
  position: absolute;
  bottom: 25px;
  width: 100%;
  margin: 0 auto;
  display: block;
  font-size: 30px;
  cursor: pointer;
}

.scroll-down {
  position: absolute;
  left: 50%;
  bottom: 5vh;
  display: block;
  text-align: center;
  font-size: 20px;
  z-index: 1;
  text-decoration: none;
  text-shadow: 0;
  width: 13px;
  height: 13px;
  border-bottom: 2px solid #fff;
  border-right: 2px solid #fff;
  z-index: 9;
  -webkit-transform: translate(-50%, 0%) rotate(45deg);
  -moz-transform: translate(-50%, 0%) rotate(45deg);
  transform: translate(-50%, 0%) rotate(45deg);
  -webkit-animation: fade_move_down 2s ease-in-out infinite;
  -moz-animation: fade_move_down 2s ease-in-out infinite;
  animation: fade_move_down 2s ease-in-out infinite;
}

/*animated scroll arrow animation*/
@-webkit-keyframes fade_move_down {
  0% {
    -webkit-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@-moz-keyframes fade_move_down {
  0% {
    -moz-transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -moz-transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
@keyframes fade_move_down {
  0% {
    transform: translate(0, -10px) rotate(45deg);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: translate(0, 10px) rotate(45deg);
    opacity: 0;
  }
}
/*About*/
#about {
  width: 90%;
  margin: 0 auto;
  max-width: 960px;
}

@media only screen and (min-width: 550px) {
  #about {
    width: 80%;
  }
}
.tech {
  margin: 10px;
}

.user {
  text-align: center;
  font-size: 60px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: center;
}

.user p {
  font-size: 16px;
}

.user-details {
  text-align: center;
  margin: 5px auto;
}

@media only screen and (min-width: 550px) {
  .user {
    flex-wrap: nowrap;
    font-size: 75px;
  }
}
/* ----------FOOTER---------- */
.footer {
  background-color: rgb(20, 136, 204);
}

.waves {
  position: relative;
  width: 100%;
  height: 15vh;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 100px;
  max-height: 150px;
}

.footer_text {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  height: 20vh;
  background-color: white;
}

/* Animation */
.parallax > use {
  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
}

.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}

.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}

.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}

.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}

@keyframes move-forever {
  0% {
    transform: translate3d(-90px, 0, 0);
  }
  100% {
    transform: translate3d(85px, 0, 0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height: 40px;
    min-height: 40px;
  }
  .footer_text {
    height: 30vh;
  }
}

